fix: do not allow the WorldGDP text container spill into the next section

--- a/src/components/DataRoom/WorldGDP/styles.module.css
+++ b/src/components/DataRoom/WorldGDP/styles.module.css
@@ -33,6 +33,8 @@
 }
 
 .textContainer {
+  position: absolute;
+  bottom: 60px;
   display: flex;
   flex-direction: column;
   margin-top: 64px;
